# city-event-router

./: README.md  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/scripts2/: newcmp
frontend/src/: App.tsx  react-app-env.d.ts
frontend/src/components/map/: index.ts  map.css  map.tsx
frontend/src/components/route-control/: index.ts  route-control.tsx
frontend/src/models/: waypoint-with-meta.ts  waypoint.ts  week-day.ts
frontend/src/models/ymaps/: balloon-properties.ts  object-data.ts
frontend/src/utils/hooks/: useConst.ts
frontend/src/utils/ymaps/: event-subscription.ts
routing/: .gitignore  CMakeLists.txt  README.md  RoutingConfig.h.in  draft-1.cpp  main.cpp  tracer.cpp
routing/distance-matrix/: distance-matrix.cpp  distance-matrix.h
routing/docs/: CMakeLists.txt  Doxyfile.in
routing/models/: custom-settings.h  priority-point.h
routing/route-context/: route-context.cpp  route-context.h
routing/src/: draft-1.cpp  draft-1.h  implementations.cpp  test-implementations.cpp
routing/src/distance-matrix/: distance-matrix.cpp  distance-matrix.h  distance-matrix.test.cpp
routing/src/models/: custom-settings.cpp  custom-settings.h  point.h  priority-point.h  waypoint.h
routing/src/route-context/: route-context.cpp  route-context.h  route-context.test.cpp
routing/src/timetable/: event.cpp  event.h  event.test.cpp  interval.h  place.cpp  place.h  timetable.h
routing/src/tracer/: tracer-impl.cpp  tracer.cpp  tracer.h  tracer.test.cpp
routing/src/tracer-strategies/: base-impl.cpp  base.h  default-impl.cpp  default.h
routing/src/tree/: list-of-siblings.h  tree.h
routing/src/tree/iterators/: breadth-first-search.cpp  breadth-first-search.h  depth-first-search.cpp  depth-first-search.h  iterators-impl.cpp  iterators.test-impl.cpp
routing/src/tree/list-of-siblings/: base-const-iterator.cpp  base-const-iterator.h  base-iterator.cpp  base-iterator.h  iterator.cpp  iterator.h  list-of-siblings-impl.cpp  list-of-siblings.cpp  list-of-siblings.h  list-of-siblings.test-impl.cpp  list-of-siblings.test.cpp
routing/tests/: CMakeLists.txt  test_main.cpp
routing/timetable/: event.cpp  event.h  place.cpp  place.h  timetable.h
routing/tracer/: tracer.cpp  tracer.h
